Update webpage.html with new content

--- a/webpage.html
+++ b/webpage.html
@@ -3,10 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Divine Temple</title>
+    <title>Divine Temple Experience</title>
+    <style>
+        :root {
+            --temple-gold: #FFD700;
+            --temple-purple: #4B0082;
+            --temple-white: #FFFFFF;
+            --temple-black: #000000;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #000000, #1a1a1a);
+            color: var(--temple-white);
+            line-height: 1.6;
+        }
+
+        .temple-header {
+            background: rgba(0,0,0,0.8);
+            padding: 1rem;
+            text-align: center;
+            border-bottom: 2px solid var(--temple-gold);
+        }
+
+        .enoch-calendar {
+            background: rgba(75,0,130,0.7);
+            padding: 1rem;
+            border-radius: 10px;
+            border: 1px solid var(--temple-gold);
+            margin: 1rem auto;
+            max-width: 300px;
+        }
+
+        .temple-section {
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .chamber {
+            margin: 2rem 0;
+            padding: 2rem;
+            background: rgba(75,0,130,0.3);
+            border-radius: 10px;
+            border: 1px solid var(--temple-gold);
+        }
+
+        .temple-button {
+            background: var(--temple-purple);
+            color: var(--temple-gold);
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .temple-button:hover {
+            background: var(--temple-gold);
+            color: var(--temple-purple);
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Divine Temple</h1>
-    <p>This is your webpage hosted on GitHub Pages.</p>
+    <header class="temple-header">
+        <h1>Divine Temple Experience</h1>
+        <div class="enoch-calendar">
+            <h3>Sacred Calendar</h3>
+            <div id="calendar-display">
+                <div id="current-season">Current Season: 1</div>
+                <div id="current-day">Day: 1</div>
+                <div id="days-remaining">Days Remaining: 364</div>
+            </div>
+        </div>
+    </header>
+
+    <main class="temple-section">
+        <section id="entrance">
+            <h2>Welcome to the Sacred Journey</h2>
+            <p>Begin your path through the nine divine chambers</p>
+            <button id="enter-button" class="temple-button">Enter Temple</button>
+        </section>
+
+        <div id="chambers">
+            <div class="chamber">
+                <h3>Chamber 1: Foundation of Truth</h3>
+                <p>Begin your journey with foundational truths</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 2: Cosmic Chess Board</h3>
+                <p>Understand the divine game of life</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 3: Solar Communication</h3>
+                <p>Connect with celestial wisdom</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 4: Divine Creative Power</h3>
+                <p>Harness your creative potential</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 5: Sacred Rhythm</h3>
+                <p>Align with divine timing</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 6: Walking Divine Truth</h3>
+                <p>Embody spiritual principles</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 7: Flesh and Spirit</h3>
+                <p>Balance physical and spiritual realms</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 8: Generational Wealth</h3>
+                <p>Create lasting spiritual legacy</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+
+            <div class="chamber">
+                <h3>Chamber 9: Divine Declaration</h3>
+                <p>Speak your truth into existence</p>
+                <button class="temple-button">Enter Chamber</button>
+            </div>
+        </div>
+    </main>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Initialize Enoch Calendar
+            const calendar = {
+                totalDays: 364,
+                currentDay: 1,
+                currentSeason: 1,
+                updateCalendar: function() {
+                    document.getElementById('current-season').textContent = `Current Season: ${this.currentSeason}`;
+                    document.getElementById('current-day').textContent = `Day: ${this.currentDay}`;
+                    document.getElementById('days-remaining').textContent = `Days Remaining: ${this.totalDays - this.currentDay}`;
+                }
+            };
+
+            // Update calendar display
+            calendar.updateCalendar();
+
+            // Add click handlers for chamber buttons
+            document.querySelectorAll('.temple-button').forEach(button => {
+                button.addEventListener('click', function() {
+                    alert('Chamber meditation system coming soon...');
+                });
+            });
+        });
+    </script>
 </body>
 </html>
