--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
             button.disabled = true;
             
             // Send to Formspree
-            fetch('https://formspree.io/f/xvgwnkvl', {
+            fetch('https://formspree.io/f/xvgwnkvr', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
