--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,42 @@
                 <p style="font-size: 0.9rem; color: var(--text-secondary); margin-bottom: 2rem;">
                     No spam. Just truth. Unsubscribe anytime.
                 </p>
-                
+                <div style="max-width: 500px; margin: 0 auto;">
+    <!-- Add this style tag BEFORE the Mailchimp form -->
+    <style>
+        #mc_embed_signup {
+            background: transparent !important;
+            border: 1px solid rgba(139, 92, 246, 0.3) !important;
+            border-radius: 12px !important;
+            padding: 2rem !important;
+        }
+        #mc_embed_signup input[type="email"] {
+            width: 100% !important;
+            padding: 1rem !important;
+            background: rgba(255,255,255,0.05) !important;
+            border: 1px solid rgba(255,255,255,0.1) !important;
+            border-radius: 8px !important;
+            color: white !important;
+            font-size: 1rem !important;
+        }
+        #mc_embed_signup input[type="submit"] {
+            width: 100% !important;
+            padding: 1rem !important;
+            background: linear-gradient(135deg, #8B5CF6, #3B82F6) !important;
+            border: none !important;
+            border-radius: 8px !important;
+            color: white !important;
+            font-weight: 700 !important;
+            cursor: pointer !important;
+            margin-top: 1rem !important;
+        }
+        #mc_embed_signup .mc-field-group label {
+            color: var(--text-secondary) !important;
+        }
+    </style>
+    
+    [YOUR MAILCHIMP CODE HERE]
+</div>
                 <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
   <style type="text/css">
