--- a/index.html
+++ b/index.html
@@ -1138,11 +1138,10 @@
  <div style="max-width: 500px; margin: 0 auto;">
     <!-- Add this style tag BEFORE the Mailchimp form -->
     <style>
-        #mc_embed_signup {
-            background: transparent !important;
-            border: 1px solid rgba(139, 92, 246, 0.3) !important;
-            border-radius: 12px !important;
-            padding: 2rem !important;
+      #mc_embed_signup {
+    max-width: 500px !important;
+    margin: 0 auto !important;
+    background: transparent !important;
         }
         #mc_embed_signup input[type="email"] {
             width: 100% !important;
@@ -1187,6 +1186,7 @@
         </div><div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
     </div>
 </form>
+</div>
 </div>
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script></div>
 
