Add padding to the container div in index.html

--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
                 <p style="font-size: 0.9rem; color: var(--text-secondary); margin-bottom: 2rem;">
                     No spam. Just truth. Unsubscribe anytime.
                 </p>
- <div style="max-width: 500px; margin: 0 auto;">
+ <div style="max-width: 500px; margin: 0 auto; padding-bottom: 2rem;">
     <!-- Add this style tag BEFORE the Mailchimp form -->
     <style>
       #mc_embed_signup {
