--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
     <div class="container">
         <div class="hero">
             <div class="badge">🏛️ Founding Members • 47 of 50 Spots Remaining</div>
+<div style="text-align: center; margin-bottom: 2rem;">
+    <img src="https://github.com/nazarite777/divine-temple/blob/main/logoyogabg.png?raw=true" alt="Eden Consciousness" style="max-width: 300px; width: 100%; border-radius: 16px; box-shadow: 0 10px 40px rgba(245, 158, 11, 0.5);">
+</div>
+<h1>EDEN CONSCIOUSNESS</h1>
             <h1>EDEN CONSCIOUSNESS</h1>
             <p class="subtitle">Spiritual Development Center</p>
             
