--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="Join Eden Consciousness - Where Seekers Become Students, Students Become Members, Members Become Leaders. Founding Members: $347 (47/50 remaining)">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
+
+        @media (max-width: 768px) {
+    /* Audiobook promo mobile adjustments */
+    div[style*="grid-template-columns: 1fr 2fr"] {
+        grid-template-columns: 1fr !important;
+        text-align: center;
+    }
+}
         * {
             margin: 0;
             padding: 0;
