--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         grid-template-columns: 1fr !important;
         text-align: center;
     }
+    
+    /* Fix audiobook promo container on mobile */
+    div[style*="max-width: 900px"][style*="margin: 3rem auto"] {
+        margin: 2rem 1rem -1rem 1rem !important;
+        padding: 1.5rem !important;
+    }
 }
+
         * {
             margin: 0;
             padding: 0;
