--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
     }
     
     /* Fix audiobook promo container on mobile */
-    div[style*="max-width: 900px"][style*="margin: 3rem auto"] {
-        margin: 2rem 1rem -1rem 1rem !important;
+    .audiobook-promo {
+        margin: 2rem 1rem 0 1rem !important;
         padding: 1.5rem !important;
+        width: calc(100% - 2rem) !important;
+        max-width: calc(100% - 2rem) !important;
+        box-sizing: border-box !important;
+    }
+    
+    .audiobook-promo > div[style*="grid"] {
+        gap: 1rem !important;
     }
 }
 
