--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 </div>
             </div>
             
-            <a href="members.html" style="display: inline-block; padding: 1.5rem 3rem; background: linear-gradient(135deg, var(--accent-gold), var(--accent-purple)); border: none; border-radius: 12px; color: white; font-weight: 700; text-decoration: none; font-size: 1.2rem; box-shadow: 0 10px 30px rgba(245, 158, 11, 0.4); transition: transform 0.3s ease;">
+            <a href="https://nazarite777.github.io/divine-temple/members.html" style="display: inline-block; padding: 1.5rem 3rem; background: linear-gradient(135deg, var(--accent-gold), var(--accent-purple)); border: none; border-radius: 12px; color: white; font-weight: 700; text-decoration: none; font-size: 1.2rem; box-shadow: 0 10px 30px rgba(245, 158, 11, 0.4); transition: transform 0.3s ease;">
                 🏛️ ENTER DIVINE TEMPLE
             </a>
             
@@ -1402,7 +1402,7 @@
                     Access 18 Sacred Spiritual Portals including Soul Journey, Healing Circle, Mystic Arts, Sacred Sound, Light Language, Earth Medicine, Ascension Gateway, and Sacred Geometry.
                 </p>
                 <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
-                    <a href="members.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-gold), var(--accent-purple)); font-size: 1.1rem; padding: 1rem 2rem; position: relative; overflow: hidden;">
+                    <a href="https://nazarite777.github.io/divine-temple/members.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-gold), var(--accent-purple)); font-size: 1.1rem; padding: 1rem 2rem; position: relative; overflow: hidden;">
                         <span style="position: relative; z-index: 2;">✨ ENTER DIVINE TEMPLE ✨</span>
                         <div style="position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent); animation: shimmer 2s infinite;"></div>
                     </a>
