--- a/members.html
+++ b/members.html
@@ -17662,7 +17662,7 @@ Signature: ________________"></textarea>
                         mainContent.style.display = 'block';
                         mainContent.classList.add('authenticated');
                     }
-                }, 1500);
+                }, 4000); // Increased from 1500 to 4000ms
             } else {
                 console.log('❌ Authentication failed');
                 errorDiv.textContent = '❌ Invalid Divine Credentials. Please check your Divine Name and Sacred Key.';
