--- a/members.html
+++ b/members.html
@@ -33,20 +33,20 @@
            AUTHENTICATION STYLES
            ===================================== */
         #auth-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            position: fixed !important;
+            top: 0 !important;
+            left: 0 !important;
+            width: 100% !important;
+            height: 100% !important;
             background: linear-gradient(135deg, 
                 rgba(10, 14, 39, 0.98) 0%,
                 rgba(26, 31, 58, 0.98) 50%,
-                rgba(15, 15, 35, 0.98) 100%);
-            z-index: 10000;
+                rgba(15, 15, 35, 0.98) 100%) !important;
+            z-index: 999999 !important;
             display: flex !important;
-            align-items: center;
-            justify-content: center;
-            backdrop-filter: blur(15px);
+            align-items: center !important;
+            justify-content: center !important;
+            backdrop-filter: blur(15px) !important;
             visibility: visible !important;
             opacity: 1 !important;
         }
@@ -208,6 +208,12 @@
 
         .hidden {
             display: none !important;
+        }
+        
+        /* Ensure main content is hidden when auth is active */
+        body.auth-active #main-content {
+            display: none !important;
+            z-index: -999 !important;
         }
 
         .animated-bg {
@@ -17806,11 +17812,28 @@ Signature: ________________"></textarea>
             console.log('👁️ Showing authentication overlay...');
             const authOverlay = document.getElementById('auth-overlay');
             if (authOverlay) {
+                // Force display with maximum priority
                 authOverlay.style.display = 'flex';
                 authOverlay.style.visibility = 'visible';
                 authOverlay.style.opacity = '1';
+                authOverlay.style.zIndex = '999999';
+                authOverlay.style.position = 'fixed';
+                authOverlay.style.top = '0';
+                authOverlay.style.left = '0';
+                authOverlay.style.width = '100vw';
+                authOverlay.style.height = '100vh';
                 authOverlay.classList.add('show');
                 document.body.classList.add('auth-active');
+                
+                // Debug check
+                const computedStyle = window.getComputedStyle(authOverlay);
+                console.log('🔍 Auth overlay computed styles:', {
+                    display: computedStyle.display,
+                    visibility: computedStyle.visibility,
+                    opacity: computedStyle.opacity,
+                    zIndex: computedStyle.zIndex,
+                    position: computedStyle.position
+                });
                 console.log('✅ Auth overlay displayed successfully');
             } else {
                 console.error('❌ Auth overlay element not found!');
