--- a/book-reviews.html
+++ b/book-reviews.html
@@ -432,7 +432,7 @@
                 <div class="logo">🏛️ EDEN CONSCIOUSNESS</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="members.html">Divine Temple</a></li>
+                    <li><a href="members-new.html">Divine Temple</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="book-reviews.html">Book Reviews</a></li>
                     <li><a href="sales-page.html">Get Started</a></li>
@@ -858,7 +858,7 @@
             
             <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
                 <a href="sales-page.html" class="cta-button" style="max-width: 300px;">VIEW ALL PACKAGES</a>
-                <a href="members.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-purple), var(--accent-blue)); max-width: 300px;">ENTER DIVINE TEMPLE</a>
+                <a href="members-new.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-purple), var(--accent-blue)); max-width: 300px;">ENTER DIVINE TEMPLE</a>
             </div>
         </div>
     </section>
@@ -875,7 +875,7 @@
             
             <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin: 2rem 0; font-size: 0.9rem;">
                 <a href="index.html" style="color: var(--text-secondary); text-decoration: none;">Home</a>
-                <a href="members.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
+                <a href="members-new.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
                 <a href="testimonials.html" style="color: var(--text-secondary); text-decoration: none;">Testimonials</a>
                 <a href="book-reviews.html" style="color: var(--text-secondary); text-decoration: none;">Book Reviews</a>
                 <a href="sales-page.html" style="color: var(--text-secondary); text-decoration: none;">Get Started</a>
