--- a/combo-packages.html
+++ b/combo-packages.html
@@ -331,7 +331,7 @@
                 <div class="logo">🏛️ EDEN CONSCIOUSNESS</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="members.html">Divine Temple</a></li>
+                    <li><a href="members-new.html">Divine Temple</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="combo-packages.html">Packages</a></li>
                     <li><a href="sales-page.html">Get Started</a></li>
@@ -706,7 +706,7 @@
             
             <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin: 2rem 0; font-size: 0.9rem;">
                 <a href="index.html" style="color: var(--text-secondary); text-decoration: none;">Home</a>
-                <a href="members.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
+                <a href="members-new.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
                 <a href="testimonials.html" style="color: var(--text-secondary); text-decoration: none;">Testimonials</a>
                 <a href="combo-packages.html" style="color: var(--text-secondary); text-decoration: none;">Packages</a>
             </div>
