--- a/testimonials.html
+++ b/testimonials.html
@@ -316,7 +316,7 @@
                 <div class="logo">🏛️ EDEN CONSCIOUSNESS</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="members.html">Divine Temple</a></li>
+                    <li><a href="members-new.html">Divine Temple</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="sales-page.html">Get Started</a></li>
                 </ul>
@@ -553,7 +553,7 @@
             
             <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
                 <a href="sales-page.html" class="cta-button">EXPLORE ALL PACKAGES</a>
-                <a href="members.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-purple), var(--accent-blue));">ENTER DIVINE TEMPLE</a>
+                <a href="members-new.html" class="cta-button" style="background: linear-gradient(135deg, var(--accent-purple), var(--accent-blue));">ENTER DIVINE TEMPLE</a>
             </div>
         </div>
     </section>
@@ -570,7 +570,7 @@
             
             <div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin: 2rem 0; font-size: 0.9rem;">
                 <a href="index.html" style="color: var(--text-secondary); text-decoration: none;">Home</a>
-                <a href="members.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
+                <a href="members-new.html" style="color: var(--text-secondary); text-decoration: none;">Divine Temple</a>
                 <a href="testimonials.html" style="color: var(--text-secondary); text-decoration: none;">Testimonials</a>
                 <a href="sales-page.html" style="color: var(--text-secondary); text-decoration: none;">Get Started</a>
             </div>
