--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <!-- Author Image & Info -->
                     <div style="text-align: center;">
                         <div style="width: 280px; height: 280px; border-radius: 50%; overflow: hidden; margin: 0 auto 2rem; box-shadow: 0 20px 60px rgba(245, 158, 11, 0.4); border: 4px solid var(--accent-gold);">
-                            <img src="https://github.com/nazarite777/divine-temple/blob/main/logoyogabg.png?raw=true" alt="Nazir El - Author & Temple Builder" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                            <img src="https://github.com/nazarite777/divine-temple/blob/main/nazir-photo.jpg?raw=true" alt="Nazir El - Author & Temple Builder" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
                         </div>
                         <h3 style="color: var(--accent-gold); margin-bottom: 0.5rem; font-family: 'Playfair Display', serif; font-size: 2rem;">Nazir El</h3>
                         <p style="color: var(--text-secondary); font-size: 1.1rem; margin-bottom: 1rem;">Temple Builder & Consciousness Guide</p>
