--- a/index-new.html
+++ b/index-new.html
@@ -578,6 +578,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#book">Book</a></li>
+                <li><a href="audiobook.html">Audiobook</a></li>
                 <li><a href="#temple">Temple</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
