--- a/audiobook.html
+++ b/audiobook.html
@@ -609,7 +609,7 @@
                 <span class="logo-text">Eden Consciousness</span>
             </div>
             <ul class="nav-links">
-                <li><a href="index-new.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#book">Book</a></li>
                 <li><a href="#audiobook">Audiobook</a></li>
                 <li><a href="#temple">Temple</a></li>
@@ -781,7 +781,7 @@
             
             <div style="display: flex; gap: 1.5rem; justify-content: center; flex-wrap: wrap;">
                 <a href="https://square.link/u/iBLVYLEQ" class="btn btn-primary" style="background: white; color: var(--bg-primary); font-size: 1.2rem;">🎧 Get Audiobook - $17</a>
-                <a href="index-new.html" class="btn btn-secondary" style="border-color: white; color: white;">Explore All Options</a>
+                <a href="index.html" class="btn btn-secondary" style="border-color: white; color: white;">Explore All Options</a>
             </div>
         </div>
     </section>
@@ -808,7 +808,7 @@
                     <h3>Community</h3>
                     <a href="testimonials.html">Testimonials</a>
                     <a href="book-reviews.html">Book Reviews</a>
-                    <a href="index-new.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="audiobook.html">Audiobook</a>
                 </div>
                 <div class="footer-section">
