--- a/sales-page.html
+++ b/sales-page.html
@@ -430,7 +430,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <a href="index-new.html" class="back-button">
+    <a href="index.html" class="back-button">
         ← Back to Home
     </a>
     
