--- a/testimonials.html
+++ b/testimonials.html
@@ -531,7 +531,7 @@
                 <span class="logo-text">Eden Consciousness</span>
             </div>
             <ul class="nav-links">
-                <li><a href="index-new.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#book">Book</a></li>
                 <li><a href="#temple">Temple</a></li>
                 <li><a href="#about">About</a></li>
@@ -799,7 +799,7 @@
                     <h3>Community</h3>
                     <a href="testimonials.html">Testimonials</a>
                     <a href="book-reviews.html">Book Reviews</a>
-                    <a href="index-new.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#email-capture">Free Chapter</a>
                 </div>
                 <div class="footer-section">
