--- a/index.html
+++ b/index.html
@@ -815,9 +815,14 @@
         <div class="container">
             <h2>Get Your FREE Chapter</h2>
             <p>Download the first chapter of "Ya Heard Me" and begin your journey back to divine consciousness</p>
-            <form class="email-form" action="https://us11.admin.mailchimp.com/lists/members/?id=481785" method="post">
-                <input type="email" class="email-input" placeholder="Enter your email address" required>
-                <button type="submit" class="btn btn-primary">Get Free Chapter</button>
+            <form class="email-form" action="https://github.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                <input type="email" class="email-input" name="EMAIL" placeholder="Enter your email address" required>
+                <input type="hidden" name="tags" value="free-chapter,homepage">
+                <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                    <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                </div>
+                <button type="submit" class="btn btn-primary" name="subscribe">Get Free Chapter</button>
             </form>
         </div>
     </section>
