--- a/resources.html
+++ b/resources.html
@@ -506,10 +506,10 @@
                     <p>Get the first chapter of "Ya Heard Me" and begin your journey back to divine consciousness. Instant delivery to your inbox.</p>
                     
                     <!-- Begin Mailchimp Signup Form -->
-                    <form class="email-form" action="https://github.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Enter your email address" required>
                         <!-- Notification to your Gmail -->
-                        <input type="hidden" name="tags" value="free-chapter,resources-page">
+                        <input type="hidden" name="TAGS" value="2548849">
                         <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
@@ -534,9 +534,9 @@
                         </div>
                     </div>
 
-                    <form class="email-form" action="https://github.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Get advanced calendar insights" required>
-                        <input type="hidden" name="tags" value="enoch-calendar,resources-page">
+                        <input type="hidden" name="TAGS" value="2548853">
                         <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
@@ -557,9 +557,9 @@
                         <button type="button" class="btn btn-secondary" onclick="drawOracleCard()">Draw Daily Card</button>
                     </div>
 
-                    <form class="email-form" action="https://github.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Get daily oracle cards delivered" required>
-                        <input type="hidden" name="tags" value="oracle-cards,resources-page">
+                        <input type="hidden" name="TAGS" value="2548857">
                         <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
@@ -584,9 +584,9 @@
                         </ul>
                     </div>
 
-                    <form class="email-form" action="https://github.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Enter email to download template" required>
-                        <input type="hidden" name="tags" value="manifestation-template,resources-page">
+                        <input type="hidden" name="TAGS" value="2548861">
                         <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
@@ -610,9 +610,14 @@
                         <p style="font-size: 0.9rem; color: var(--text-secondary); margin-top: 0.5rem;">7-minute sample from our 30-minute full meditation</p>
                     </div>
 
-                    <form class="email-form" action="https://us11.admin.mailchimp.com/lists/members/?id=481785" method="post">
+                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Access full meditation library" required>
-                        <button type="submit" class="btn btn-primary">Get Full Library</button>
+                        <input type="hidden" name="TAGS" value="2548865">
+                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                        </div>
+                        <button type="submit" class="btn btn-primary" name="subscribe">Get Full Library</button>
                     </form>
                 </div>
 
@@ -632,9 +637,14 @@
                         </ul>
                     </div>
 
-                    <form class="email-form" action="https://us11.admin.mailchimp.com/lists/members/?id=481785" method="post">
+                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Download consciousness guide" required>
-                        <button type="submit" class="btn btn-primary">Download Guide</button>
+                        <input type="hidden" name="TAGS" value="2548869">
+                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                        </div>
+                        <button type="submit" class="btn btn-primary" name="subscribe">Download Guide</button>
                     </form>
                 </div>
 
