--- a/resources.html
+++ b/resources.html
@@ -506,13 +506,12 @@
                     <p>Get the first chapter of "Ya Heard Me" and begin your journey back to divine consciousness. Instant delivery to your inbox.</p>
                     
                     <!-- Begin Mailchimp Signup Form -->
-                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://gmail.us9.list-manage.com/subscribe/post?u=53f0baf84fb1bc8c515e6f731&amp;id=0005a32626&amp;f_id=007053e1f0" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Enter your email address" required>
-                        <!-- Notification to your Gmail -->
-                        <input type="hidden" name="TAGS" value="2548849">
-                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <!-- Resource identifier -->
+                        <input type="hidden" name="TAGS" value="free-chapter">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                            <input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value="">
                         </div>
                         <button type="submit" class="btn btn-primary" name="subscribe">Get Free Chapter</button>
                     </form>
@@ -534,12 +533,11 @@
                         </div>
                     </div>
 
-                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://gmail.us9.list-manage.com/subscribe/post?u=53f0baf84fb1bc8c515e6f731&amp;id=0005a32626&amp;f_id=007053e1f0" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Get advanced calendar insights" required>
-                        <input type="hidden" name="TAGS" value="2548853">
-                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <input type="hidden" name="TAGS" value="enoch-calendar">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                            <input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value="">
                         </div>
                         <button type="submit" class="btn btn-primary" name="subscribe">Get Calendar Guide</button>
                     </form>
@@ -557,12 +555,11 @@
                         <button type="button" class="btn btn-secondary" onclick="drawOracleCard()">Draw Daily Card</button>
                     </div>
 
-                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://gmail.us9.list-manage.com/subscribe/post?u=53f0baf84fb1bc8c515e6f731&amp;id=0005a32626&amp;f_id=007053e1f0" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Get daily oracle cards delivered" required>
-                        <input type="hidden" name="TAGS" value="2548857">
-                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <input type="hidden" name="TAGS" value="oracle-cards">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                            <input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value="">
                         </div>
                         <button type="submit" class="btn btn-primary" name="subscribe">Daily Oracle Delivery</button>
                     </form>
@@ -584,12 +581,11 @@
                         </ul>
                     </div>
 
-                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://gmail.us9.list-manage.com/subscribe/post?u=53f0baf84fb1bc8c515e6f731&amp;id=0005a32626&amp;f_id=007053e1f0" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Enter email to download template" required>
-                        <input type="hidden" name="TAGS" value="2548861">
-                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <input type="hidden" name="TAGS" value="manifestation-template">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                            <input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value="">
                         </div>
                         <button type="submit" class="btn btn-primary" name="subscribe">Download Template</button>
                     </form>
@@ -610,12 +606,11 @@
                         <p style="font-size: 0.9rem; color: var(--text-secondary); margin-top: 0.5rem;">7-minute sample from our 30-minute full meditation</p>
                     </div>
 
-                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://gmail.us9.list-manage.com/subscribe/post?u=53f0baf84fb1bc8c515e6f731&amp;id=0005a32626&amp;f_id=007053e1f0" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Access full meditation library" required>
-                        <input type="hidden" name="TAGS" value="2548865">
-                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <input type="hidden" name="TAGS" value="meditation-library">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                            <input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value="">
                         </div>
                         <button type="submit" class="btn btn-primary" name="subscribe">Get Full Library</button>
                     </form>
@@ -637,12 +632,11 @@
                         </ul>
                     </div>
 
-                    <form class="email-form" action="https://edenconsciousness.us11.list-manage.com/subscribe/post?u=f8b1c4c7a1f8b8e6c9a2d3e4f5&amp;id=481785" method="post" name="mc-embedded-subscribe-form" target="_blank">
+                    <form class="email-form" action="https://gmail.us9.list-manage.com/subscribe/post?u=53f0baf84fb1bc8c515e6f731&amp;id=0005a32626&amp;f_id=007053e1f0" method="post" name="mc-embedded-subscribe-form" target="_blank">
                         <input type="email" class="email-input" name="EMAIL" placeholder="Download consciousness guide" required>
-                        <input type="hidden" name="TAGS" value="2548869">
-                        <input type="hidden" name="NOTIFY" value="edenconsciousnesssdt@gmail.com">
+                        <input type="hidden" name="TAGS" value="consciousness-guide">
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_f8b1c4c7a1f8b8e6c9a2d3e4f5_481785" tabindex="-1" value="">
+                            <input type="text" name="b_53f0baf84fb1bc8c515e6f731_0005a32626" tabindex="-1" value="">
                         </div>
                         <button type="submit" class="btn btn-primary" name="subscribe">Download Guide</button>
                     </form>
