--- a/book-reviews.html
+++ b/book-reviews.html
@@ -432,10 +432,12 @@
                 <div class="logo">🏛️ EDEN CONSCIOUSNESS</div>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="members-new.html">Divine Temple</a></li>
+                    <li><a href="index.html#book">Book</a></li>
+                    <li><a href="audiobook.html">Audiobook</a></li>
+                    <li><a href="index.html#temple">Temple</a></li>
+                    <li><a href="members-new.html">Member Portal</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="book-reviews.html">Book Reviews</a></li>
-                    <li><a href="sales-page.html">Get Started</a></li>
+                    <li><a href="resources.html">Resources</a></li>
                 </ul>
             </nav>
         </div>
