--- a/index.html
+++ b/index.html
@@ -635,9 +635,9 @@
                 <li><a href="#book">Book</a></li>
                 <li><a href="audiobook.html">Audiobook</a></li>
                 <li><a href="#temple">Temple</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="book-reviews.html">Reviews</a></li>
+                <li><a href="resources.html">Resources</a></li>
             </ul>
             <a href="https://square.link/u/xuKzAPeA" class="cta-nav">Join Temple</a>
         </nav>
@@ -711,6 +711,10 @@
                         <li>Advanced tools & resources</li>
                     </ul>
                     <a href="https://square.link/u/g8CFT019" class="btn btn-primary">Join Temple</a>
+                    <div style="text-align: center; margin-top: 1rem; padding: 1rem; background: rgba(245, 158, 11, 0.1); border-radius: 15px; border: 1px solid rgba(245, 158, 11, 0.3);">
+                        <p style="color: var(--accent-gold); font-weight: 600; margin-bottom: 0.5rem;">✨ Already a Member?</p>
+                        <a href="members-new.html" style="color: var(--text-primary); text-decoration: none; font-weight: 500; padding: 0.5rem 1rem; background: rgba(255, 255, 255, 0.1); border-radius: 20px; transition: all 0.3s ease; display: inline-block;">🏛️ Enter Divine Portal</a>
+                    </div>
                 </div>
             </div>
 
