--- a/resources.html
+++ b/resources.html
@@ -551,6 +551,7 @@
                 <li><a href="index.html#book">Book</a></li>
                 <li><a href="audiobook.html">Audiobook</a></li>
                 <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="resources.html">Resources</a></li>
             </ul>
@@ -563,6 +564,20 @@
         <div class="container">
             <h1>Free Spiritual Resources</h1>
             <p>Access powerful tools and resources to accelerate your spiritual journey. Each resource includes instant access and ongoing support through our community.</p>
+            
+            <!-- Member Portal Access -->
+            <div style="background: linear-gradient(135deg, rgba(139, 92, 246, 0.2), rgba(245, 158, 11, 0.2)); border-radius: 20px; padding: 2rem; margin: 2rem auto; max-width: 600px; text-align: center; border: 1px solid var(--glass-border);">
+                <h3 style="color: var(--accent-gold); margin-bottom: 1rem; font-size: 1.3rem;">🏛️ Ready for the Full Experience?</h3>
+                <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">Access 18+ premium spiritual tools, advanced practices, and exclusive content in the Divine Temple Member Portal.</p>
+                <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                    <a href="members-new.html" style="background: linear-gradient(135deg, var(--accent-gold), #FBBF24); color: var(--bg-primary); padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease; display: inline-flex; align-items: center; gap: 0.5rem;">
+                        ✨ Member Portal
+                    </a>
+                    <a href="https://square.link/u/xuKzAPeA" style="background: transparent; color: var(--accent-gold); border: 2px solid var(--accent-gold); padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">
+                        Join Temple
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
