--- a/testimonials.html
+++ b/testimonials.html
@@ -532,11 +532,12 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#book">Book</a></li>
-                <li><a href="#temple">Temple</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html#book">Book</a></li>
+                <li><a href="audiobook.html">Audiobook</a></li>
+                <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="book-reviews.html">Reviews</a></li>
+                <li><a href="resources.html">Resources</a></li>
             </ul>
             <a href="https://square.link/u/xuKzAPeA" class="cta-nav">Join Temple</a>
         </nav>
