--- a/audiobook.html
+++ b/audiobook.html
@@ -610,11 +610,12 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#book">Book</a></li>
+                <li><a href="index.html#book">Book</a></li>
                 <li><a href="#audiobook">Audiobook</a></li>
-                <li><a href="#temple">Temple</a></li>
+                <li><a href="index.html#temple">Temple</a></li>
+                <li><a href="members-new.html">Member Portal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="book-reviews.html">Reviews</a></li>
+                <li><a href="resources.html">Resources</a></li>
             </ul>
             <a href="https://square.link/u/xuKzAPeA" class="cta-nav">Join Temple</a>
         </nav>
@@ -715,6 +716,22 @@
                 <a href="https://square.link/u/iBLVYLEQ" class="btn btn-primary" style="width: 100%; justify-content: center; margin-top: 2rem;">🎧 Get Audiobook Now</a>
                 
                 <p style="font-size: 0.9rem; color: var(--text-secondary); margin-top: 1rem;">Secure payment via Square • Instant download</p>
+                
+                <!-- Member Portal Upgrade -->
+                <div style="background: rgba(139, 92, 246, 0.1); border: 1px solid rgba(139, 92, 246, 0.3); border-radius: 15px; padding: 1.5rem; margin-top: 2rem;">
+                    <h4 style="color: var(--accent-purple); margin-bottom: 0.5rem; font-size: 1.1rem;">🏛️ Want More Than Just Audio?</h4>
+                    <p style="color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 1rem;">
+                        Access the complete spiritual growth platform with 18+ interactive tools, live community, and advanced practices.
+                    </p>
+                    <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
+                        <a href="members-new.html" style="color: var(--accent-purple); text-decoration: none; font-weight: 600; font-size: 0.9rem;">
+                            ✨ Member Portal
+                        </a>
+                        <a href="https://square.link/u/xuKzAPeA" style="color: var(--accent-gold); text-decoration: none; font-weight: 600; font-size: 0.9rem;">
+                            Join Temple
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
